syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leeturner";
option java_outer_classname = "MarsRoverGrpcProto";

package rovers;

service MarsRoverGrpc  {
  rpc rovers (MarsRoverRequest) returns (MarsRoverResponse) {}
}

message MarsRoverRequest {}

message MarsRoverResponse {
  repeated MarsRover rovers = 1;
}

message MarsRover {
  int32 id = 1;
  string name = 2;
}
